# ComputePhysics

./: .gitignore
A12/: Homework12.sln  Homework_A12.sln
A12/Homework1_1/: Homework1_1.vcxproj  Homework1_1.vcxproj.filters  ResistanceGrid.cpp
A12/Homework1_2/: Homework1_2.vcxproj  Homework1_2.vcxproj.filters  LogisticModel.cpp  q5.txt  q5_2.txt
A12/Homework_A1/: Homework_A1.vcxproj
A12/Homework_A2/: Homework_A2.vcxproj  q1.txt  q9_1.txt  q9_5.txt
A34/: Homework1_34.sln  Homework_A34.sln
A34/Homework1_3/: Homework1_3.vcxproj  Homework1_3.vcxproj.filters  PoissonEquation.cpp
A34/Homework1_4/: Homework1_4.vcxproj  a.txt  (+4 more)
B12/: B12.sln
BLAS/: BLAS.sln  CMakeLists.txt  Notes.md
BLAS/AVX512FTest/: AVX512FTest.cpp  AVX512FTest.vcxproj  AVX512FTest.vcxproj.filters
BLAS/Calculator/: Calculator.cpp  Calculator.vcxproj  Calculator.vcxproj.filters
BLAS/EigenvalueTest/: EigenvalueTest.cpp  EigenvalueTest.vcxproj  EigenvalueTest.vcxproj.filters  G^TTG.nb  a.txt  b.txt  test.nb
BLAS/MatMultMT/: CMakeLists.txt  MatMultMT.cpp  MatMultMT.vcxproj  MatMultMT.vcxproj.filters  test.nb
BLAS/QSortSIMD/: QSortSIMD.cpp  QSortSIMD.vcxproj  QSortSIMD.vcxproj.filters
BLAS/SimdTest/: SimdTest.cpp  SimdTest.vcxproj  SimdTest.vcxproj.filters  SimdTestLinux.cpp
BLAS/TestSet/: CMakeLists.txt  TestSet.cpp  TestSet.vcxproj  TestSet.vcxproj.filters  matC.txt  matD.txt  matE.txt  test.nb  vecA.txt  vecB.txt  vecC.txt  vecD.txt  vecE.txt
Experiments/: Experiments.sln
Final/: Final.sln  data.opju  test.nb
Homework1/: Homework1.sln
include/: _BLAS.h
include_/: _BLAS.h
(+82 files in other folders)
